Fix squish emoji behavior and styling

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -44,7 +44,7 @@
 .derp-smiley {
     position: absolute;
     bottom: 3rem;
-    left: 0;
+    left: 0.5rem;
     font-size: xx-large;
     transition:
         transform 0.6s cubic-bezier(0.68, -0.55, 0.27, 1.55),
@@ -66,7 +66,7 @@
 
 .derp-smiley.flip {
     left: auto;
-    right: 0;
+    right: 0.5rem;
 }
 
 .derp-smiley.wiggle {
